igb: Cleanups to fix for trailing statement (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14493,6 +14493,7 @@
 	patches.drivers/0127-igb-Cleanups-to-fix-braces-location-warnings.patch
 	patches.drivers/0128-igb-Cleanups-to-fix-incorrect-indentation.patch
 	patches.drivers/0129-igb-Cleanups-to-fix-pointer-location-error.patch
+	patches.drivers/0130-igb-Cleanups-to-fix-for-trailing-statement.patch
 
 	########################################################
 	# Wireless Networking
