igb: Cleanups to fix msleep warnings (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14499,6 +14499,7 @@
 	patches.drivers/0133-igb-Cleanups-to-fix-missing-break-in-switch-statemen.patch
 	patches.drivers/0134-igb-Cleanups-to-remove-return-parentheses.patch
 	patches.drivers/0135-igb-Cleanups-to-fix-line-length-warnings.patch
+	patches.drivers/0136-igb-Cleanups-to-fix-msleep-warnings.patch
 
 	########################################################
 	# Wireless Networking
