--- a/series.conf
+++ b/series.conf
@@ -14464,6 +14464,7 @@
 	patches.drivers/0098-igb-Start-temperature-sensor-attribute-index-with-1.patch
 	patches.drivers/0099-igb-Fix-for-issue-where-values-could-be-too-high-for.patch
 	patches.drivers/0100-igb-Fix-queue-allocation-method-to-accommodate-chang.patch
+	patches.drivers/0101-igb-Change-to-use-statically-allocated-array-for-MSI.patch
 
 	########################################################
 	# Wireless Networking
