--- a/series.conf
+++ b/series.conf
@@ -14484,6 +14484,7 @@
 	patches.drivers/0118-igb-Unset-IGB_FLAG_HAS_MSIX-flag-when-falling-back-t.patch
 	patches.drivers/0119-igb-never-generate-both-software-and-hardware-timest.patch
 	patches.drivers/0120-igb-fix-race-conditions-on-queuing-skb-for-HW-time-s.patch
+	patches.drivers/0121-INTEL-IGB-Convert-iounmap-to-pci_iounmap.patch
 
 	########################################################
 	# Wireless Networking
