igb: Removed unused i2c function (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14424,6 +14424,7 @@
 	patches.drivers/0058-igb-Fix-set_ethtool-function-to-call-update-nvm-for-.patch
 	patches.drivers/0059-igb-Fix-possible-panic-caused-by-Rx-traffic-arrival-.patch
 	patches.drivers/0060-igb-Implementation-of-i210-i211-LED-support.patch
+	patches.drivers/0061-igb-Removed-unused-i2c-function.patch
 
 	########################################################
 	# Wireless Networking
