igb: Support for 100base-fx SFP (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14397,6 +14397,7 @@
 	patches.drivers/0031-igb-fix-i350-anti-spoofing-config.patch
 	patches.drivers/0032-igb-Fix-null-pointer-dereference.patch
 	patches.drivers/0033-igb-make-sensor-info-static.patch
+	patches.drivers/0034-igb-Support-for-100base-fx-SFP.patch
 
 	########################################################
 	# Wireless Networking
