--- a/series.conf
+++ b/series.conf
@@ -14414,6 +14414,7 @@
 	patches.drivers/0048-igb-display-a-warning-message-when-SmartSpeed-works.patch
 	patches.drivers/0049-igb-Retain-HW-VLAN-filtering-while-in-promiscuous-VT.patch
 	patches.drivers/0050-igb-Remove-dead-code-path.patch
+	patches.drivers/0051-igb-Remove-id-s-that-will-not-be-productized-for-Lin.patch
 
 	########################################################
 	# Wireless Networking
