--- a/series.conf
+++ b/series.conf
@@ -14389,6 +14389,7 @@
 	patches.drivers/0023-igb-Update-igb-to-use-a-path-similar-to-ixgbe-to-det.patch
 	patches.drivers/0024-igb-Initialize-PHY-function-pointers.patch
 	patches.drivers/0025-igb-Initialize-NVM-function-pointers.patch
+	patches.drivers/0026-igb-Intialize-MAC-function-pointers.patch
 
 	########################################################
 	# Wireless Networking
