igb: separate hardware setting from the set_ts_config ioctl (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14515,6 +14515,7 @@
 	patches.drivers/0149-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/0150-net-use-ethtool_cmd_speed_set-helper-to-set-ethtool-.patch
 	patches.drivers/0151-igb-unhide-invariant-returns.patch
+	patches.drivers/0152-igb-separate-hardware-setting-from-the-set_ts_config.patch
 
 	########################################################
 	# Wireless Networking
