ethernet: Use eth_random_addr (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14363,6 +14363,9 @@
 	patches.drivers/sky2-0048-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/sky2-0049-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
 	
+	# igb SP4 update (fate#317388, bsc#909491)
+	patches.drivers/0001-ethernet-Use-eth_random_addr.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
