igb: Add timeout for PTP Tx work item (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14374,6 +14374,7 @@
 	patches.drivers/0008-igb-Add-support-functions-to-access-thermal-data.patch
 	patches.drivers/0009-igb-Enable-hwmon-data-output-for-thermal-sensors-via.patch
 	patches.drivers/0010-igb-Add-support-for-SW-timestamping.patch
+	patches.drivers/0011-igb-Add-timeout-for-PTP-Tx-work-item.patch
 
 	########################################################
 	# Wireless Networking
