--- a/series.conf
+++ b/series.conf
@@ -14489,6 +14489,7 @@
 	patches.drivers/0123-igb-fix-last_rx_timestamp-usage.patch
 	patches.drivers/0124-igb-fix-stats-for-i210-rx_fifo_errors.patch
 	patches.drivers/0125-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
+	patches.drivers/0126-igb-Cleanups-for-messaging.patch
 
 	########################################################
 	# Wireless Networking
