--- a/series.conf
+++ b/series.conf
@@ -14486,6 +14486,7 @@
 	patches.drivers/0120-igb-fix-race-conditions-on-queuing-skb-for-HW-time-s.patch
 	patches.drivers/0121-INTEL-IGB-Convert-iounmap-to-pci_iounmap.patch
 	patches.drivers/0122-igb-remove-open-coded-skb_cow_head.patch
+	patches.drivers/0123-igb-fix-last_rx_timestamp-usage.patch
 
 	########################################################
 	# Wireless Networking
