igb: Read flow control for i350 from correct EEPROM section (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14446,6 +14446,7 @@
 	patches.drivers/0080-igb-Implementation-to-report-advertised-supported-li.patch
 	patches.drivers/0081-igb-Update-version-number.patch
 	patches.drivers/0082-igb-Add-additional-get_phy_id-call-for-i354-devices.patch
+	patches.drivers/0083-igb-Read-flow-control-for-i350-from-correct-EEPROM-s.patch
 
 	########################################################
 	# Wireless Networking
