igb: Mask off check of frag_off as we only want fragment offset (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14400,6 +14400,7 @@
 	patches.drivers/0034-igb-Support-for-100base-fx-SFP.patch
 	patches.drivers/0035-igb-Implement-support-to-power-sfp-cage-and-turn-on-.patch
 	patches.drivers/0036-igb-random-code-and-comments-fix.patch
+	patches.drivers/0037-igb-Mask-off-check-of-frag_off-as-we-only-want-fragm.patch
 
 	########################################################
 	# Wireless Networking
