--- a/series.conf
+++ b/series.conf
@@ -14467,6 +14467,7 @@
 	patches.drivers/0101-igb-Change-to-use-statically-allocated-array-for-MSI.patch
 	patches.drivers/0102-igb-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 	patches.drivers/0103-igb-make-local-functions-static-and-remove-dead-code.patch
+	patches.drivers/0104-igb-Update-license-text-to-remove-FSF-address-and-up.patch
 
 	########################################################
 	# Wireless Networking
