igb: Unset IGB_FLAG_HAS_MSIX-flag when falling back to msi-only (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14481,6 +14481,7 @@
 	patches.drivers/0115-igb-add-register-rd-wr-for-surprise-removal.patch
 	patches.drivers/0116-igb-specify-phc_index-of-82575-for-get_ts_info.patch
 	patches.drivers/0117-igb-Fix-Null-pointer-dereference-in-igb_reset_q_vect.patch
+	patches.drivers/0118-igb-Unset-IGB_FLAG_HAS_MSIX-flag-when-falling-back-t.patch
 
 	########################################################
 	# Wireless Networking
