igb: Support ports mapped in 64-bit PCI space (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14459,6 +14459,7 @@
 	patches.drivers/0093-igb-Update-link-modes-display-in-ethtool.patch
 	patches.drivers/0094-igb-Fixed-Wake-On-LAN-support.patch
 	patches.drivers/0095-igb-Add-media-switching-feature-for-i354-PHY-s.patch
+	patches.drivers/0096-igb-Support-ports-mapped-in-64-bit-PCI-space.patch
 
 	########################################################
 	# Wireless Networking
