igb: Use pci_vfs_assigned instead of igb_vfs_are_assigned (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14410,6 +14410,7 @@
 	patches.drivers/0044-igb-Add-support-for-i354-devices.patch
 	patches.drivers/0045-igb-SERDES-loopback-sigdetect-bit-on-i210-devices.patch
 	patches.drivers/0046-igb-Add-SMBI-semaphore-to-I210-I211.patch
+	patches.drivers/0047-igb-Use-pci_vfs_assigned-instead-of-igb_vfs_are_assi.patch
 
 	########################################################
 	# Wireless Networking
