--- a/series.conf
+++ b/series.conf
@@ -14521,6 +14521,7 @@
 	patches.drivers/0155-igb-remove-unnecessary-break-after-goto.patch
 	patches.drivers/0156-igb-remove-unnecessary-break-after-return.patch
 	patches.drivers/0157-igb-Add-message-when-malformed-packets-detected-by-h.patch
+	patches.drivers/0158-igb-bump-igb-version-to-5.2.13.patch
 
 	########################################################
 	# Wireless Networking
