igb: Refactor of init_nvm_params (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14431,6 +14431,7 @@
 	patches.drivers/0065-igb-Added-rcu_lock-to-avoid-race.patch
 	patches.drivers/0066-igb-don-t-allow-SR-IOV-without-MSI-X.patch
 	patches.drivers/0067-igb-Update-MTU-so-that-it-is-always-at-least-a-stand.patch
+	patches.drivers/0068-igb-Refactor-of-init_nvm_params.patch
 
 	########################################################
 	# Wireless Networking
