igb: implement SIOCGHWTSTAMP ioctl (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14477,6 +14477,7 @@
 	patches.drivers/0111-igb-Add-register-defines-needed-for-time-sync-functi.patch
 	patches.drivers/0112-igb-enable-VLAN-stripping-for-VMs-with-i350.patch
 	patches.drivers/0113-igb-Convert-uses-of-__constant_-foo-to-foo.patch
+	patches.drivers/0114-igb-implement-SIOCGHWTSTAMP-ioctl.patch
 
 	########################################################
 	# Wireless Networking
