--- a/series.conf
+++ b/series.conf
@@ -14380,6 +14380,7 @@
 	patches.drivers/0014-igb-Use-in-kernel-PTP_EV_PORT-define.patch
 	patches.drivers/0015-igb-Replace-rmb-in-Tx-cleanup-with-read_barrier_depe.patch
 	patches.drivers/0016-igb-Copyright-string-update-to-year-2013.patch
+	patches.drivers/0017-igb-Don-t-give-VFs-random-MAC-addresses.patch
 
 	########################################################
 	# Wireless Networking
