igb: Fix set_ethtool function to call update nvm for entire image (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14421,6 +14421,7 @@
 	patches.drivers/0055-igb-Add-update-to-last_rx_timestamp-in-Rx-rings.patch
 	patches.drivers/0056-igb-Support-for-SFP-modules-discovery.patch
 	patches.drivers/0057-igb-SerDes-flow-control-setting.patch
+	patches.drivers/0058-igb-Fix-set_ethtool-function-to-call-update-nvm-for-.patch
 
 	########################################################
 	# Wireless Networking
