--- a/series.conf
+++ b/series.conf
@@ -14487,6 +14487,7 @@
 	patches.drivers/0121-INTEL-IGB-Convert-iounmap-to-pci_iounmap.patch
 	patches.drivers/0122-igb-remove-open-coded-skb_cow_head.patch
 	patches.drivers/0123-igb-fix-last_rx_timestamp-usage.patch
+	patches.drivers/0124-igb-fix-stats-for-i210-rx_fifo_errors.patch
 
 	########################################################
 	# Wireless Networking
