igb: Fix Null-pointer dereference in igb_reset_q_vector (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14480,6 +14480,7 @@
 	patches.drivers/0114-igb-implement-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/0115-igb-add-register-rd-wr-for-surprise-removal.patch
 	patches.drivers/0116-igb-specify-phc_index-of-82575-for-get_ts_info.patch
+	patches.drivers/0117-igb-Fix-Null-pointer-dereference-in-igb_reset_q_vect.patch
 
 	########################################################
 	# Wireless Networking
