--- a/series.conf
+++ b/series.conf
@@ -14518,6 +14518,7 @@
 	patches.drivers/0152-igb-separate-hardware-setting-from-the-set_ts_config.patch
 	patches.drivers/0153-igb-bring-link-up-when-PHY-is-powered-up.patch
 	patches.drivers/0154-igb-Workaround-for-i210-Errata-25-Slow-System-Clock.patch
+	patches.drivers/0155-igb-remove-unnecessary-break-after-goto.patch
 
 	########################################################
 	# Wireless Networking
