--- a/series.conf
+++ b/series.conf
@@ -14399,6 +14399,7 @@
 	patches.drivers/0033-igb-make-sensor-info-static.patch
 	patches.drivers/0034-igb-Support-for-100base-fx-SFP.patch
 	patches.drivers/0035-igb-Implement-support-to-power-sfp-cage-and-turn-on-.patch
+	patches.drivers/0036-igb-random-code-and-comments-fix.patch
 
 	########################################################
 	# Wireless Networking
