igb: fix array size calculation (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14468,6 +14468,7 @@
 	patches.drivers/0102-igb-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 	patches.drivers/0103-igb-make-local-functions-static-and-remove-dead-code.patch
 	patches.drivers/0104-igb-Update-license-text-to-remove-FSF-address-and-up.patch
+	patches.drivers/0105-igb-fix-array-size-calculation.patch
 
 	########################################################
 	# Wireless Networking
