igb: Add ethtool offline tests for i354 (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14450,6 +14450,7 @@
 	patches.drivers/0084-DMA-API-net-intel-igb-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/0085-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/0086-igb-Fix-ethtool-loopback-test-for-82580-copper.patch
+	patches.drivers/0087-igb-Add-ethtool-offline-tests-for-i354.patch
 
 	########################################################
 	# Wireless Networking
