--- a/series.conf
+++ b/series.conf
@@ -14392,6 +14392,7 @@
 	patches.drivers/0026-igb-Intialize-MAC-function-pointers.patch
 	patches.drivers/0027-igb-Refractoring-function-pointers-in-igb_get_invari.patch
 	patches.drivers/0028-igb-increase-timeout-for-ethtool-offline-self-test.patch
+	patches.drivers/0029-igb-Fix-link-setup-for-I210-devices.patch
 
 	########################################################
 	# Wireless Networking
