igb: Add SMBI semaphore to I210/I211 (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14409,6 +14409,7 @@
 	patches.drivers/0043-igb-add-support-for-spoofchk-config.patch
 	patches.drivers/0044-igb-Add-support-for-i354-devices.patch
 	patches.drivers/0045-igb-SERDES-loopback-sigdetect-bit-on-i210-devices.patch
+	patches.drivers/0046-igb-Add-SMBI-semaphore-to-I210-I211.patch
 
 	########################################################
 	# Wireless Networking
