--- a/series.conf
+++ b/series.conf
@@ -14387,6 +14387,7 @@
 	patches.drivers/0021-igb-Fix-for-improper-allocation-flag-in-igb_get_i2c_.patch
 	patches.drivers/0022-igb-Refix-sparse-warning-in-igb_get_i2c_client.patch
 	patches.drivers/0023-igb-Update-igb-to-use-a-path-similar-to-ixgbe-to-det.patch
+	patches.drivers/0024-igb-Initialize-PHY-function-pointers.patch
 
 	########################################################
 	# Wireless Networking
