--- a/series.conf
+++ b/series.conf
@@ -14390,6 +14390,7 @@
 	patches.drivers/0024-igb-Initialize-PHY-function-pointers.patch
 	patches.drivers/0025-igb-Initialize-NVM-function-pointers.patch
 	patches.drivers/0026-igb-Intialize-MAC-function-pointers.patch
+	patches.drivers/0027-igb-Refractoring-function-pointers-in-igb_get_invari.patch
 
 	########################################################
 	# Wireless Networking
