igb: Expose RSS indirection table for ethtool (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14435,6 +14435,7 @@
 	patches.drivers/0069-igb-Refactor-NVM-read-functions-to-accommodate-devic.patch
 	patches.drivers/0070-igb-Add-device-support-for-flashless-SKU-of-i210-dev.patch
 	patches.drivers/0071-igb-Add-macro-for-size-of-RETA-indirection-table.patch
+	patches.drivers/0072-igb-Expose-RSS-indirection-table-for-ethtool.patch
 
 	########################################################
 	# Wireless Networking
