igb: Fix master/slave mode for all m88 i354 PHY's (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14453,6 +14453,7 @@
 	patches.drivers/0087-igb-Add-ethtool-offline-tests-for-i354.patch
 	patches.drivers/0088-igb-Add-ethtool-support-to-configure-number-of-chann.patch
 	patches.drivers/0089-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
+	patches.drivers/0090-igb-Fix-master-slave-mode-for-all-m88-i354-PHY-s.patch
 
 	########################################################
 	# Wireless Networking
