--- a/series.conf
+++ b/series.conf
@@ -14388,6 +14388,7 @@
 	patches.drivers/0022-igb-Refix-sparse-warning-in-igb_get_i2c_client.patch
 	patches.drivers/0023-igb-Update-igb-to-use-a-path-similar-to-ixgbe-to-det.patch
 	patches.drivers/0024-igb-Initialize-PHY-function-pointers.patch
+	patches.drivers/0025-igb-Initialize-NVM-function-pointers.patch
 
 	########################################################
 	# Wireless Networking
