igb: Fix possible panic caused by Rx traffic arrival while interface is down (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14422,6 +14422,7 @@
 	patches.drivers/0056-igb-Support-for-SFP-modules-discovery.patch
 	patches.drivers/0057-igb-SerDes-flow-control-setting.patch
 	patches.drivers/0058-igb-Fix-set_ethtool-function-to-call-update-nvm-for-.patch
+	patches.drivers/0059-igb-Fix-possible-panic-caused-by-Rx-traffic-arrival-.patch
 
 	########################################################
 	# Wireless Networking
