--- a/series.conf
+++ b/series.conf
@@ -14449,6 +14449,7 @@
 	patches.drivers/0083-igb-Read-flow-control-for-i350-from-correct-EEPROM-s.patch
 	patches.drivers/0084-DMA-API-net-intel-igb-fix-32-bit-DMA-mask-handling.patch
 	patches.drivers/0085-intel-Remove-extern-from-function-prototypes.patch
+	patches.drivers/0086-igb-Fix-ethtool-loopback-test-for-82580-copper.patch
 
 	########################################################
 	# Wireless Networking
