--- a/series.conf
+++ b/series.conf
@@ -14419,6 +14419,7 @@
 	patches.drivers/0053-igb-limit-udelay-for-phy-changes-to-10000us.patch
 	patches.drivers/0054-igb-Changed-LEDs-blink-mechanism-to-include-designs-.patch
 	patches.drivers/0055-igb-Add-update-to-last_rx_timestamp-in-Rx-rings.patch
+	patches.drivers/0056-igb-Support-for-SFP-modules-discovery.patch
 
 	########################################################
 	# Wireless Networking
