igb: Add i2c interface to igb (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14370,6 +14370,7 @@
 	patches.drivers/0004-net_tstamp-Improve-kernel-doc-for-struct-hwtstamp_co.patch
 	patches.drivers/0005-net_tstamp-Add-SIOCGHWTSTAMP-ioctl-to-match-SIOCSHWT.patch
 	patches.drivers/0006-remove-init-of-dev-perm_addr-in-drivers.patch
+	patches.drivers/0007-igb-Add-i2c-interface-to-igb.patch
 
 	########################################################
 	# Wireless Networking
