igb: Add mechanism for detecting latched hardware Rx timestamp (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14375,6 +14375,7 @@
 	patches.drivers/0009-igb-Enable-hwmon-data-output-for-thermal-sensors-via.patch
 	patches.drivers/0010-igb-Add-support-for-SW-timestamping.patch
 	patches.drivers/0011-igb-Add-timeout-for-PTP-Tx-work-item.patch
+	patches.drivers/0012-igb-Add-mechanism-for-detecting-latched-hardware-Rx-.patch
 
 	########################################################
 	# Wireless Networking
