--- a/series.conf
+++ b/series.conf
@@ -14436,6 +14436,7 @@
 	patches.drivers/0070-igb-Add-device-support-for-flashless-SKU-of-i210-dev.patch
 	patches.drivers/0071-igb-Add-macro-for-size-of-RETA-indirection-table.patch
 	patches.drivers/0072-igb-Expose-RSS-indirection-table-for-ethtool.patch
+	patches.drivers/0073-igb-Don-t-look-for-a-PBA-in-the-iNVM-when-flashless.patch
 
 	########################################################
 	# Wireless Networking
