--- a/series.conf
+++ b/series.conf
@@ -14473,6 +14473,7 @@
 	patches.drivers/0107-net-igb-calls-skb_set_hash.patch
 	patches.drivers/0108-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/0109-igb-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/0110-igb-remove-references-to-long-gone-command-line-para.patch
 
 	########################################################
 	# Wireless Networking
