igb: Pull adapter out of main path in igb_xmit_frame_ring (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14401,6 +14401,7 @@
 	patches.drivers/0035-igb-Implement-support-to-power-sfp-cage-and-turn-on-.patch
 	patches.drivers/0036-igb-random-code-and-comments-fix.patch
 	patches.drivers/0037-igb-Mask-off-check-of-frag_off-as-we-only-want-fragm.patch
+	patches.drivers/0038-igb-Pull-adapter-out-of-main-path-in-igb_xmit_frame_.patch
 
 	########################################################
 	# Wireless Networking
