igb: specify phc_index of 82575 for get_ts_info (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14479,6 +14479,7 @@
 	patches.drivers/0113-igb-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/0114-igb-implement-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/0115-igb-add-register-rd-wr-for-surprise-removal.patch
+	patches.drivers/0116-igb-specify-phc_index-of-82575-for-get_ts_info.patch
 
 	########################################################
 	# Wireless Networking
