etherdevice: introduce help function eth_zero_addr() (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14365,6 +14365,7 @@
 	
 	# igb SP4 update (fate#317388, bsc#909491)
 	patches.drivers/0001-ethernet-Use-eth_random_addr.patch
+	patches.drivers/0002-etherdevice-introduce-help-function-eth_zero_addr.patch
 
 	########################################################
 	# Wireless Networking
