igb: Changed LEDs blink mechanism to include designs using cathode (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14417,6 +14417,7 @@
 	patches.drivers/0051-igb-Remove-id-s-that-will-not-be-productized-for-Lin.patch
 	patches.drivers/0052-igb-Bump-version-of-driver.patch
 	patches.drivers/0053-igb-limit-udelay-for-phy-changes-to-10000us.patch
+	patches.drivers/0054-igb-Changed-LEDs-blink-mechanism-to-include-designs-.patch
 
 	########################################################
 	# Wireless Networking
