--- a/series.conf
+++ b/series.conf
@@ -14485,6 +14485,7 @@
 	patches.drivers/0119-igb-never-generate-both-software-and-hardware-timest.patch
 	patches.drivers/0120-igb-fix-race-conditions-on-queuing-skb-for-HW-time-s.patch
 	patches.drivers/0121-INTEL-IGB-Convert-iounmap-to-pci_iounmap.patch
+	patches.drivers/0122-igb-remove-open-coded-skb_cow_head.patch
 
 	########################################################
 	# Wireless Networking
