igb: add register rd/wr for surprise removal (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14478,6 +14478,7 @@
 	patches.drivers/0112-igb-enable-VLAN-stripping-for-VMs-with-i350.patch
 	patches.drivers/0113-igb-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/0114-igb-implement-SIOCGHWTSTAMP-ioctl.patch
+	patches.drivers/0115-igb-add-register-rd-wr-for-surprise-removal.patch
 
 	########################################################
 	# Wireless Networking
