igb: Add device support for flashless SKU of i210 device (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14433,6 +14433,7 @@
 	patches.drivers/0067-igb-Update-MTU-so-that-it-is-always-at-least-a-stand.patch
 	patches.drivers/0068-igb-Refactor-of-init_nvm_params.patch
 	patches.drivers/0069-igb-Refactor-NVM-read-functions-to-accommodate-devic.patch
+	patches.drivers/0070-igb-Add-device-support-for-flashless-SKU-of-i210-dev.patch
 
 	########################################################
 	# Wireless Networking
