--- a/series.conf
+++ b/series.conf
@@ -14512,6 +14512,7 @@
 	patches.drivers/0146-igb-rename-igb_ptp_enable-to-igb_ptp_feature_enable.patch
 	patches.drivers/0147-igb-use-mac-loopback-for-i354-backplane.patch
 	patches.drivers/0148-igb-add-defaults-for-i210-TX-RX-PBSIZE.patch
+	patches.drivers/0149-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
