--- a/series.conf
+++ b/series.conf
@@ -14463,6 +14463,7 @@
 	patches.drivers/0097-igb-Add-new-feature-Media-Auto-Sense-for-82580-devic.patch
 	patches.drivers/0098-igb-Start-temperature-sensor-attribute-index-with-1.patch
 	patches.drivers/0099-igb-Fix-for-issue-where-values-could-be-too-high-for.patch
+	patches.drivers/0100-igb-Fix-queue-allocation-method-to-accommodate-chang.patch
 
 	########################################################
 	# Wireless Networking
