igb: fix vlan filtering in promisc mode when not in VT mode (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14426,6 +14426,7 @@
 	patches.drivers/0060-igb-Implementation-of-i210-i211-LED-support.patch
 	patches.drivers/0061-igb-Removed-unused-i2c-function.patch
 	patches.drivers/0062-treewide-relase-release.patch
+	patches.drivers/0063-igb-fix-vlan-filtering-in-promisc-mode-when-not-in-V.patch
 
 	########################################################
 	# Wireless Networking
