--- a/series.conf
+++ b/series.conf
@@ -14527,6 +14527,7 @@
 	patches.drivers/0161-igb-bump-version-to-5.2.15.patch
 	patches.drivers/0162-igb-don-t-reuse-pages-with-pfmemalloc-flag.patch
 	patches.drivers/0163-igb-fix-race-accessing-page-_count.patch
+	patches.drivers/0164-igb-Fixes-needed-for-surprise-removal-support.patch
 
 	########################################################
 	# Wireless Networking
