igb: Get speed and duplex for 1G non_copper devices (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14442,6 +14442,7 @@
 	patches.drivers/0076-igb-M88E1543-PHY-downshift-implementation.patch
 	patches.drivers/0077-igb-No-PHPM-support-in-i354-devices.patch
 	patches.drivers/0078-igb-Support-to-get-2_5G-link-status-for-appropriate-.patch
+	patches.drivers/0079-igb-Get-speed-and-duplex-for-1G-non_copper-devices.patch
 
 	########################################################
 	# Wireless Networking
