--- a/series.conf
+++ b/series.conf
@@ -14475,6 +14475,7 @@
 	patches.drivers/0109-igb-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/0110-igb-remove-references-to-long-gone-command-line-para.patch
 	patches.drivers/0111-igb-Add-register-defines-needed-for-time-sync-functi.patch
+	patches.drivers/0112-igb-enable-VLAN-stripping-for-VMs-with-i350.patch
 
 	########################################################
 	# Wireless Networking
