net_tstamp: Improve kernel-doc for struct hwtstamp_config (fate#317388).

--- a/series.conf
+++ b/series.conf
@@ -14367,6 +14367,7 @@
 	patches.drivers/0001-ethernet-Use-eth_random_addr.patch
 	patches.drivers/0002-etherdevice-introduce-help-function-eth_zero_addr.patch
 	patches.drivers/0003-net-compat-Merge-multiple-implementations-of-ifreq-i.patch
+	patches.drivers/0004-net_tstamp-Improve-kernel-doc-for-struct-hwtstamp_co.patch
 
 	########################################################
 	# Wireless Networking
