igb: add defaults for i210 TX/RX PBSIZE (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14511,6 +14511,7 @@
 	patches.drivers/0145-igb-remove-redundant-PHY-power-down-register-write.patch
 	patches.drivers/0146-igb-rename-igb_ptp_enable-to-igb_ptp_feature_enable.patch
 	patches.drivers/0147-igb-use-mac-loopback-for-i354-backplane.patch
+	patches.drivers/0148-igb-add-defaults-for-i210-TX-RX-PBSIZE.patch
 
 	########################################################
 	# Wireless Networking
