--- a/series.conf
+++ b/series.conf
@@ -14483,6 +14483,7 @@
 	patches.drivers/0117-igb-Fix-Null-pointer-dereference-in-igb_reset_q_vect.patch
 	patches.drivers/0118-igb-Unset-IGB_FLAG_HAS_MSIX-flag-when-falling-back-t.patch
 	patches.drivers/0119-igb-never-generate-both-software-and-hardware-timest.patch
+	patches.drivers/0120-igb-fix-race-conditions-on-queuing-skb-for-HW-time-s.patch
 
 	########################################################
 	# Wireless Networking
