--- a/series.conf
+++ b/series.conf
@@ -14383,6 +14383,7 @@
 	patches.drivers/0017-igb-Don-t-give-VFs-random-MAC-addresses.patch
 	patches.drivers/0018-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/0019-igb-Support-using-build_skb-in-the-case-that-jumbo-f.patch
+	patches.drivers/0020-igb-Fix-for-improper-exit-in-igb_get_i2c_client.patch
 
 	########################################################
 	# Wireless Networking
