igb: Cleanups to fix missing break in switch statements (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14496,6 +14496,7 @@
 	patches.drivers/0130-igb-Cleanups-to-fix-for-trailing-statement.patch
 	patches.drivers/0131-igb-Cleanups-to-change-comment-style-on-license-head.patch
 	patches.drivers/0132-igb-Cleanups-to-fix-assignment-in-if-error.patch
+	patches.drivers/0133-igb-Cleanups-to-fix-missing-break-in-switch-statemen.patch
 
 	########################################################
 	# Wireless Networking
