igb: Refix sparse warning in igb_get_i2c_client (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14385,6 +14385,7 @@
 	patches.drivers/0019-igb-Support-using-build_skb-in-the-case-that-jumbo-f.patch
 	patches.drivers/0020-igb-Fix-for-improper-exit-in-igb_get_i2c_client.patch
 	patches.drivers/0021-igb-Fix-for-improper-allocation-flag-in-igb_get_i2c_.patch
+	patches.drivers/0022-igb-Refix-sparse-warning-in-igb_get_i2c_client.patch
 
 	########################################################
 	# Wireless Networking
