igb: Enable EEE LP advertisement (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14405,6 +14405,7 @@
 	patches.drivers/0039-igb-Use-rx-tx_itr_setting-when-setting-up-initial-va.patch
 	patches.drivers/0040-igb-Fix-sparse-warnings-on-function-pointers.patch
 	patches.drivers/0041-igb-Fix-code-comments-and-whitespace.patch
+	patches.drivers/0042-igb-Enable-EEE-LP-advertisement.patch
 
 	########################################################
 	# Wireless Networking
