--- a/series.conf
+++ b/series.conf
@@ -14384,6 +14384,7 @@
 	patches.drivers/0018-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/0019-igb-Support-using-build_skb-in-the-case-that-jumbo-f.patch
 	patches.drivers/0020-igb-Fix-for-improper-exit-in-igb_get_i2c_client.patch
+	patches.drivers/0021-igb-Fix-for-improper-allocation-flag-in-igb_get_i2c_.patch
 
 	########################################################
 	# Wireless Networking
