igb: Add ethtool support to configure number of channels (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14451,6 +14451,7 @@
 	patches.drivers/0085-intel-Remove-extern-from-function-prototypes.patch
 	patches.drivers/0086-igb-Fix-ethtool-loopback-test-for-82580-copper.patch
 	patches.drivers/0087-igb-Add-ethtool-offline-tests-for-i354.patch
+	patches.drivers/0088-igb-Add-ethtool-support-to-configure-number-of-chann.patch
 
 	########################################################
 	# Wireless Networking
