--- a/series.conf
+++ b/series.conf
@@ -14482,6 +14482,7 @@
 	patches.drivers/0116-igb-specify-phc_index-of-82575-for-get_ts_info.patch
 	patches.drivers/0117-igb-Fix-Null-pointer-dereference-in-igb_reset_q_vect.patch
 	patches.drivers/0118-igb-Unset-IGB_FLAG_HAS_MSIX-flag-when-falling-back-t.patch
+	patches.drivers/0119-igb-never-generate-both-software-and-hardware-timest.patch
 
 	########################################################
 	# Wireless Networking
