--- a/series.conf
+++ b/series.conf
@@ -14465,6 +14465,7 @@
 	patches.drivers/0099-igb-Fix-for-issue-where-values-could-be-too-high-for.patch
 	patches.drivers/0100-igb-Fix-queue-allocation-method-to-accommodate-chang.patch
 	patches.drivers/0101-igb-Change-to-use-statically-allocated-array-for-MSI.patch
+	patches.drivers/0102-igb-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 
 	########################################################
 	# Wireless Networking
