i40e,igb,ixgbe: remove usless return statements (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14507,6 +14507,7 @@
 	patches.drivers/0141-igb-Change-memcpy-to-struct-assignment.patch
 	patches.drivers/0142-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/0143-igb-ixgbe-remove-return-statements-for-void-function.patch
+	patches.drivers/0144-i40e-igb-ixgbe-remove-usless-return-statements.patch
 
 	########################################################
 	# Wireless Networking
