igb: Refactor NVM read functions to accommodate devices with no flash (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14432,6 +14432,7 @@
 	patches.drivers/0066-igb-don-t-allow-SR-IOV-without-MSI-X.patch
 	patches.drivers/0067-igb-Update-MTU-so-that-it-is-always-at-least-a-stand.patch
 	patches.drivers/0068-igb-Refactor-of-init_nvm_params.patch
+	patches.drivers/0069-igb-Refactor-NVM-read-functions-to-accommodate-devic.patch
 
 	########################################################
 	# Wireless Networking
