--- a/series.conf
+++ b/series.conf
@@ -14445,6 +14445,7 @@
 	patches.drivers/0079-igb-Get-speed-and-duplex-for-1G-non_copper-devices.patch
 	patches.drivers/0080-igb-Implementation-to-report-advertised-supported-li.patch
 	patches.drivers/0081-igb-Update-version-number.patch
+	patches.drivers/0082-igb-Add-additional-get_phy_id-call-for-i354-devices.patch
 
 	########################################################
 	# Wireless Networking
