igb: Fix for lockdep issue in igb_get_i2c_client (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14393,6 +14393,7 @@
 	patches.drivers/0027-igb-Refractoring-function-pointers-in-igb_get_invari.patch
 	patches.drivers/0028-igb-increase-timeout-for-ethtool-offline-self-test.patch
 	patches.drivers/0029-igb-Fix-link-setup-for-I210-devices.patch
+	patches.drivers/0030-igb-Fix-for-lockdep-issue-in-igb_get_i2c_client.patch
 
 	########################################################
 	# Wireless Networking
