--- a/series.conf
+++ b/series.conf
@@ -14411,6 +14411,7 @@
 	patches.drivers/0045-igb-SERDES-loopback-sigdetect-bit-on-i210-devices.patch
 	patches.drivers/0046-igb-Add-SMBI-semaphore-to-I210-I211.patch
 	patches.drivers/0047-igb-Use-pci_vfs_assigned-instead-of-igb_vfs_are_assi.patch
+	patches.drivers/0048-igb-display-a-warning-message-when-SmartSpeed-works.patch
 
 	########################################################
 	# Wireless Networking
