--- a/series.conf
+++ b/series.conf
@@ -14438,6 +14438,7 @@
 	patches.drivers/0072-igb-Expose-RSS-indirection-table-for-ethtool.patch
 	patches.drivers/0073-igb-Don-t-look-for-a-PBA-in-the-iNVM-when-flashless.patch
 	patches.drivers/0074-igb-Implementation-of-1-sec-delay-for-i210-devices.patch
+	patches.drivers/0075-igb-New-PHY_ID-for-i354-device.patch
 
 	########################################################
 	# Wireless Networking
