igb: SERDES loopback sigdetect bit on i210 devices (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14408,6 +14408,7 @@
 	patches.drivers/0042-igb-Enable-EEE-LP-advertisement.patch
 	patches.drivers/0043-igb-add-support-for-spoofchk-config.patch
 	patches.drivers/0044-igb-Add-support-for-i354-devices.patch
+	patches.drivers/0045-igb-SERDES-loopback-sigdetect-bit-on-i210-devices.patch
 
 	########################################################
 	# Wireless Networking
