--- a/series.conf
+++ b/series.conf
@@ -14368,6 +14368,7 @@
 	patches.drivers/0002-etherdevice-introduce-help-function-eth_zero_addr.patch
 	patches.drivers/0003-net-compat-Merge-multiple-implementations-of-ifreq-i.patch
 	patches.drivers/0004-net_tstamp-Improve-kernel-doc-for-struct-hwtstamp_co.patch
+	patches.drivers/0005-net_tstamp-Add-SIOCGHWTSTAMP-ioctl-to-match-SIOCSHWT.patch
 
 	########################################################
 	# Wireless Networking
