--- a/series.conf
+++ b/series.conf
@@ -14447,6 +14447,7 @@
 	patches.drivers/0081-igb-Update-version-number.patch
 	patches.drivers/0082-igb-Add-additional-get_phy_id-call-for-i354-devices.patch
 	patches.drivers/0083-igb-Read-flow-control-for-i350-from-correct-EEPROM-s.patch
+	patches.drivers/0084-DMA-API-net-intel-igb-fix-32-bit-DMA-mask-handling.patch
 
 	########################################################
 	# Wireless Networking
