igb: Add register defines needed for time sync functions (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14474,6 +14474,7 @@
 	patches.drivers/0108-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/0109-igb-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/0110-igb-remove-references-to-long-gone-command-line-para.patch
+	patches.drivers/0111-igb-Add-register-defines-needed-for-time-sync-functi.patch
 
 	########################################################
 	# Wireless Networking
