igb: bring link up when PHY is powered up (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14516,6 +14516,7 @@
 	patches.drivers/0150-net-use-ethtool_cmd_speed_set-helper-to-set-ethtool-.patch
 	patches.drivers/0151-igb-unhide-invariant-returns.patch
 	patches.drivers/0152-igb-separate-hardware-setting-from-the-set_ts_config.patch
+	patches.drivers/0153-igb-bring-link-up-when-PHY-is-powered-up.patch
 
 	########################################################
 	# Wireless Networking
