--- a/series.conf
+++ b/series.conf
@@ -14394,6 +14394,7 @@
 	patches.drivers/0028-igb-increase-timeout-for-ethtool-offline-self-test.patch
 	patches.drivers/0029-igb-Fix-link-setup-for-I210-devices.patch
 	patches.drivers/0030-igb-Fix-for-lockdep-issue-in-igb_get_i2c_client.patch
+	patches.drivers/0031-igb-fix-i350-anti-spoofing-config.patch
 
 	########################################################
 	# Wireless Networking
