--- a/series.conf
+++ b/series.conf
@@ -14471,6 +14471,7 @@
 	patches.drivers/0105-igb-fix-array-size-calculation.patch
 	patches.drivers/0106-igb-fix-warning-if-CONFIG_IGB_HWMON.patch
 	patches.drivers/0107-net-igb-calls-skb_set_hash.patch
+	patches.drivers/0108-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 
 	########################################################
 	# Wireless Networking
