igb: remove redundant PHY power down register write (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14508,6 +14508,7 @@
 	patches.drivers/0142-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/0143-igb-ixgbe-remove-return-statements-for-void-function.patch
 	patches.drivers/0144-i40e-igb-ixgbe-remove-usless-return-statements.patch
+	patches.drivers/0145-igb-remove-redundant-PHY-power-down-register-write.patch
 
 	########################################################
 	# Wireless Networking
