igb: fix warning if !CONFIG_IGB_HWMON (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14469,6 +14469,7 @@
 	patches.drivers/0103-igb-make-local-functions-static-and-remove-dead-code.patch
 	patches.drivers/0104-igb-Update-license-text-to-remove-FSF-address-and-up.patch
 	patches.drivers/0105-igb-fix-array-size-calculation.patch
+	patches.drivers/0106-igb-fix-warning-if-CONFIG_IGB_HWMON.patch
 
 	########################################################
 	# Wireless Networking
