igb: Support using build_skb in the case that jumbo frames are disabled (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14382,6 +14382,7 @@
 	patches.drivers/0016-igb-Copyright-string-update-to-year-2013.patch
 	patches.drivers/0017-igb-Don-t-give-VFs-random-MAC-addresses.patch
 	patches.drivers/0018-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
+	patches.drivers/0019-igb-Support-using-build_skb-in-the-case-that-jumbo-f.patch
 
 	########################################################
 	# Wireless Networking
