igb: Added rcu_lock to avoid race (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14428,6 +14428,7 @@
 	patches.drivers/0062-treewide-relase-release.patch
 	patches.drivers/0063-igb-fix-vlan-filtering-in-promisc-mode-when-not-in-V.patch
 	patches.drivers/0064-igb-Read-register-for-latch_on-without-return-value.patch
+	patches.drivers/0065-igb-Added-rcu_lock-to-avoid-race.patch
 
 	########################################################
 	# Wireless Networking
