--- a/series.conf
+++ b/series.conf
@@ -14396,6 +14396,7 @@
 	patches.drivers/0030-igb-Fix-for-lockdep-issue-in-igb_get_i2c_client.patch
 	patches.drivers/0031-igb-fix-i350-anti-spoofing-config.patch
 	patches.drivers/0032-igb-Fix-null-pointer-dereference.patch
+	patches.drivers/0033-igb-make-sensor-info-static.patch
 
 	########################################################
 	# Wireless Networking
