igb: don't allow SR-IOV without MSI-X (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14429,6 +14429,7 @@
 	patches.drivers/0063-igb-fix-vlan-filtering-in-promisc-mode-when-not-in-V.patch
 	patches.drivers/0064-igb-Read-register-for-latch_on-without-return-value.patch
 	patches.drivers/0065-igb-Added-rcu_lock-to-avoid-race.patch
+	patches.drivers/0066-igb-don-t-allow-SR-IOV-without-MSI-X.patch
 
 	########################################################
 	# Wireless Networking
