igb: Add support for i354 devices (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14407,6 +14407,7 @@
 	patches.drivers/0041-igb-Fix-code-comments-and-whitespace.patch
 	patches.drivers/0042-igb-Enable-EEE-LP-advertisement.patch
 	patches.drivers/0043-igb-add-support-for-spoofchk-config.patch
+	patches.drivers/0044-igb-Add-support-for-i354-devices.patch
 
 	########################################################
 	# Wireless Networking
