igb: Cleanups to change comment style on license headers (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14494,6 +14494,7 @@
 	patches.drivers/0128-igb-Cleanups-to-fix-incorrect-indentation.patch
 	patches.drivers/0129-igb-Cleanups-to-fix-pointer-location-error.patch
 	patches.drivers/0130-igb-Cleanups-to-fix-for-trailing-statement.patch
+	patches.drivers/0131-igb-Cleanups-to-change-comment-style-on-license-head.patch
 
 	########################################################
 	# Wireless Networking
