--- a/series.conf
+++ b/series.conf
@@ -14504,6 +14504,7 @@
 	patches.drivers/0138-igb-Cleanups-to-replace-deprecated-DEFINE_PCI_DEVICE.patch
 	patches.drivers/0139-igb-Cleanups-to-remove-unneeded-extern-declaration.patch
 	patches.drivers/0140-igb-Replace-1-0-return-values-with-true-false.patch
+	patches.drivers/0141-igb-Change-memcpy-to-struct-assignment.patch
 
 	########################################################
 	# Wireless Networking
