ethernet: Remove unnecessary alloc/OOM messages, alloc cleanups (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14381,6 +14381,7 @@
 	patches.drivers/0015-igb-Replace-rmb-in-Tx-cleanup-with-read_barrier_depe.patch
 	patches.drivers/0016-igb-Copyright-string-update-to-year-2013.patch
 	patches.drivers/0017-igb-Don-t-give-VFs-random-MAC-addresses.patch
+	patches.drivers/0018-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 
 	########################################################
 	# Wireless Networking
