--- a/series.conf
+++ b/series.conf
@@ -14403,6 +14403,7 @@
 	patches.drivers/0037-igb-Mask-off-check-of-frag_off-as-we-only-want-fragm.patch
 	patches.drivers/0038-igb-Pull-adapter-out-of-main-path-in-igb_xmit_frame_.patch
 	patches.drivers/0039-igb-Use-rx-tx_itr_setting-when-setting-up-initial-va.patch
+	patches.drivers/0040-igb-Fix-sparse-warnings-on-function-pointers.patch
 
 	########################################################
 	# Wireless Networking
