igb: add support for spoofchk config (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14406,6 +14406,7 @@
 	patches.drivers/0040-igb-Fix-sparse-warnings-on-function-pointers.patch
 	patches.drivers/0041-igb-Fix-code-comments-and-whitespace.patch
 	patches.drivers/0042-igb-Enable-EEE-LP-advertisement.patch
+	patches.drivers/0043-igb-add-support-for-spoofchk-config.patch
 
 	########################################################
 	# Wireless Networking
