--- a/series.conf
+++ b/series.conf
@@ -14491,6 +14491,7 @@
 	patches.drivers/0125-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/0126-igb-Cleanups-for-messaging.patch
 	patches.drivers/0127-igb-Cleanups-to-fix-braces-location-warnings.patch
+	patches.drivers/0128-igb-Cleanups-to-fix-incorrect-indentation.patch
 
 	########################################################
 	# Wireless Networking
