igb: No PHPM support in i354 devices (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14440,6 +14440,7 @@
 	patches.drivers/0074-igb-Implementation-of-1-sec-delay-for-i210-devices.patch
 	patches.drivers/0075-igb-New-PHY_ID-for-i354-device.patch
 	patches.drivers/0076-igb-M88E1543-PHY-downshift-implementation.patch
+	patches.drivers/0077-igb-No-PHPM-support-in-i354-devices.patch
 
 	########################################################
 	# Wireless Networking
