igb: Fix for issue where values could be too high for udelay function (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14462,6 +14462,7 @@
 	patches.drivers/0096-igb-Support-ports-mapped-in-64-bit-PCI-space.patch
 	patches.drivers/0097-igb-Add-new-feature-Media-Auto-Sense-for-82580-devic.patch
 	patches.drivers/0098-igb-Start-temperature-sensor-attribute-index-with-1.patch
+	patches.drivers/0099-igb-Fix-for-issue-where-values-could-be-too-high-for.patch
 
 	########################################################
 	# Wireless Networking
