igb: Add macro for size of RETA indirection table (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14434,6 +14434,7 @@
 	patches.drivers/0068-igb-Refactor-of-init_nvm_params.patch
 	patches.drivers/0069-igb-Refactor-NVM-read-functions-to-accommodate-devic.patch
 	patches.drivers/0070-igb-Add-device-support-for-flashless-SKU-of-i210-dev.patch
+	patches.drivers/0071-igb-Add-macro-for-size-of-RETA-indirection-table.patch
 
 	########################################################
 	# Wireless Networking
