--- a/series.conf
+++ b/series.conf
@@ -14495,6 +14495,7 @@
 	patches.drivers/0129-igb-Cleanups-to-fix-pointer-location-error.patch
 	patches.drivers/0130-igb-Cleanups-to-fix-for-trailing-statement.patch
 	patches.drivers/0131-igb-Cleanups-to-change-comment-style-on-license-head.patch
+	patches.drivers/0132-igb-Cleanups-to-fix-assignment-in-if-error.patch
 
 	########################################################
 	# Wireless Networking
