igb: Cleanups to replace deprecated DEFINE_PCI_DEVICE_TABLE (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14501,6 +14501,7 @@
 	patches.drivers/0135-igb-Cleanups-to-fix-line-length-warnings.patch
 	patches.drivers/0136-igb-Cleanups-to-fix-msleep-warnings.patch
 	patches.drivers/0137-igb-Cleanups-to-fix-static-initialization.patch
+	patches.drivers/0138-igb-Cleanups-to-replace-deprecated-DEFINE_PCI_DEVICE.patch
 
 	########################################################
 	# Wireless Networking
