e1000e/igb/ixgbe/i40e: fix message terminations (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14488,6 +14488,7 @@
 	patches.drivers/0122-igb-remove-open-coded-skb_cow_head.patch
 	patches.drivers/0123-igb-fix-last_rx_timestamp-usage.patch
 	patches.drivers/0124-igb-fix-stats-for-i210-rx_fifo_errors.patch
+	patches.drivers/0125-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 
 	########################################################
 	# Wireless Networking
