--- a/series.conf
+++ b/series.conf
@@ -14378,6 +14378,7 @@
 	patches.drivers/0012-igb-Add-mechanism-for-detecting-latched-hardware-Rx-.patch
 	patches.drivers/0013-igb-Free-any-held-skb-that-should-have-been-timestam.patch
 	patches.drivers/0014-igb-Use-in-kernel-PTP_EV_PORT-define.patch
+	patches.drivers/0015-igb-Replace-rmb-in-Tx-cleanup-with-read_barrier_depe.patch
 
 	########################################################
 	# Wireless Networking
