--- a/series.conf
+++ b/series.conf
@@ -14420,6 +14420,7 @@
 	patches.drivers/0054-igb-Changed-LEDs-blink-mechanism-to-include-designs-.patch
 	patches.drivers/0055-igb-Add-update-to-last_rx_timestamp-in-Rx-rings.patch
 	patches.drivers/0056-igb-Support-for-SFP-modules-discovery.patch
+	patches.drivers/0057-igb-SerDes-flow-control-setting.patch
 
 	########################################################
 	# Wireless Networking
