igb: Implement support to power sfp cage and turn on I2C (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14398,6 +14398,7 @@
 	patches.drivers/0032-igb-Fix-null-pointer-dereference.patch
 	patches.drivers/0033-igb-make-sensor-info-static.patch
 	patches.drivers/0034-igb-Support-for-100base-fx-SFP.patch
+	patches.drivers/0035-igb-Implement-support-to-power-sfp-cage-and-turn-on-.patch
 
 	########################################################
 	# Wireless Networking
