igb: make local functions static and remove dead code (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14466,6 +14466,7 @@
 	patches.drivers/0100-igb-Fix-queue-allocation-method-to-accommodate-chang.patch
 	patches.drivers/0101-igb-Change-to-use-statically-allocated-array-for-MSI.patch
 	patches.drivers/0102-igb-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
+	patches.drivers/0103-igb-make-local-functions-static-and-remove-dead-code.patch
 
 	########################################################
 	# Wireless Networking
