--- a/series.conf
+++ b/series.conf
@@ -14455,6 +14455,7 @@
 	patches.drivers/0089-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/0090-igb-Fix-master-slave-mode-for-all-m88-i354-PHY-s.patch
 	patches.drivers/0091-igb-Don-t-let-ethtool-try-to-write-to-iNVM-in-i210-i.patch
+	patches.drivers/0092-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 
 	########################################################
 	# Wireless Networking
