igb: Add new feature Media Auto Sense for 82580 devices only (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14460,6 +14460,7 @@
 	patches.drivers/0094-igb-Fixed-Wake-On-LAN-support.patch
 	patches.drivers/0095-igb-Add-media-switching-feature-for-i354-PHY-s.patch
 	patches.drivers/0096-igb-Support-ports-mapped-in-64-bit-PCI-space.patch
+	patches.drivers/0097-igb-Add-new-feature-Media-Auto-Sense-for-82580-devic.patch
 
 	########################################################
 	# Wireless Networking
