--- a/series.conf
+++ b/series.conf
@@ -14458,6 +14458,7 @@
 	patches.drivers/0092-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/0093-igb-Update-link-modes-display-in-ethtool.patch
 	patches.drivers/0094-igb-Fixed-Wake-On-LAN-support.patch
+	patches.drivers/0095-igb-Add-media-switching-feature-for-i354-PHY-s.patch
 
 	########################################################
 	# Wireless Networking
