igb: M88E1543 PHY downshift implementation (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14439,6 +14439,7 @@
 	patches.drivers/0073-igb-Don-t-look-for-a-PBA-in-the-iNVM-when-flashless.patch
 	patches.drivers/0074-igb-Implementation-of-1-sec-delay-for-i210-devices.patch
 	patches.drivers/0075-igb-New-PHY_ID-for-i354-device.patch
+	patches.drivers/0076-igb-M88E1543-PHY-downshift-implementation.patch
 
 	########################################################
 	# Wireless Networking
