igb: Use rx/tx_itr_setting when setting up initial value of itr (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14402,6 +14402,7 @@
 	patches.drivers/0036-igb-random-code-and-comments-fix.patch
 	patches.drivers/0037-igb-Mask-off-check-of-frag_off-as-we-only-want-fragm.patch
 	patches.drivers/0038-igb-Pull-adapter-out-of-main-path-in-igb_xmit_frame_.patch
+	patches.drivers/0039-igb-Use-rx-tx_itr_setting-when-setting-up-initial-va.patch
 
 	########################################################
 	# Wireless Networking
