igb: Cleanups to fix braces location warnings (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14490,6 +14490,7 @@
 	patches.drivers/0124-igb-fix-stats-for-i210-rx_fifo_errors.patch
 	patches.drivers/0125-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/0126-igb-Cleanups-for-messaging.patch
+	patches.drivers/0127-igb-Cleanups-to-fix-braces-location-warnings.patch
 
 	########################################################
 	# Wireless Networking
