--- a/series.conf
+++ b/series.conf
@@ -14510,6 +14510,7 @@
 	patches.drivers/0144-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/0145-igb-remove-redundant-PHY-power-down-register-write.patch
 	patches.drivers/0146-igb-rename-igb_ptp_enable-to-igb_ptp_feature_enable.patch
+	patches.drivers/0147-igb-use-mac-loopback-for-i354-backplane.patch
 
 	########################################################
 	# Wireless Networking
