net: get rid of SET_ETHTOOL_OPS (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14505,6 +14505,7 @@
 	patches.drivers/0139-igb-Cleanups-to-remove-unneeded-extern-declaration.patch
 	patches.drivers/0140-igb-Replace-1-0-return-values-with-true-false.patch
 	patches.drivers/0141-igb-Change-memcpy-to-struct-assignment.patch
+	patches.drivers/0142-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
