igb: Fix code comments and whitespace (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14404,6 +14404,7 @@
 	patches.drivers/0038-igb-Pull-adapter-out-of-main-path-in-igb_xmit_frame_.patch
 	patches.drivers/0039-igb-Use-rx-tx_itr_setting-when-setting-up-initial-va.patch
 	patches.drivers/0040-igb-Fix-sparse-warnings-on-function-pointers.patch
+	patches.drivers/0041-igb-Fix-code-comments-and-whitespace.patch
 
 	########################################################
 	# Wireless Networking
