igb: increase timeout for ethtool offline self-test (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14391,6 +14391,7 @@
 	patches.drivers/0025-igb-Initialize-NVM-function-pointers.patch
 	patches.drivers/0026-igb-Intialize-MAC-function-pointers.patch
 	patches.drivers/0027-igb-Refractoring-function-pointers-in-igb_get_invari.patch
+	patches.drivers/0028-igb-increase-timeout-for-ethtool-offline-self-test.patch
 
 	########################################################
 	# Wireless Networking
