igb: fix race accessing page->_count (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14526,6 +14526,7 @@
 	patches.drivers/0160-i40e-igb-Convert-to-dev_consume_skb_any.patch
 	patches.drivers/0161-igb-bump-version-to-5.2.15.patch
 	patches.drivers/0162-igb-don-t-reuse-pages-with-pfmemalloc-flag.patch
+	patches.drivers/0163-igb-fix-race-accessing-page-_count.patch
 
 	########################################################
 	# Wireless Networking
