igb: Don't let ethtool try to write to iNVM in i210/i211 (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14454,6 +14454,7 @@
 	patches.drivers/0088-igb-Add-ethtool-support-to-configure-number-of-chann.patch
 	patches.drivers/0089-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/0090-igb-Fix-master-slave-mode-for-all-m88-i354-PHY-s.patch
+	patches.drivers/0091-igb-Don-t-let-ethtool-try-to-write-to-iNVM-in-i210-i.patch
 
 	########################################################
 	# Wireless Networking
