igb: Support to get 2_5G link status for appropriate media type (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14441,6 +14441,7 @@
 	patches.drivers/0075-igb-New-PHY_ID-for-i354-device.patch
 	patches.drivers/0076-igb-M88E1543-PHY-downshift-implementation.patch
 	patches.drivers/0077-igb-No-PHPM-support-in-i354-devices.patch
+	patches.drivers/0078-igb-Support-to-get-2_5G-link-status-for-appropriate-.patch
 
 	########################################################
 	# Wireless Networking
