--- a/series.conf
+++ b/series.conf
@@ -14377,6 +14377,7 @@
 	patches.drivers/0011-igb-Add-timeout-for-PTP-Tx-work-item.patch
 	patches.drivers/0012-igb-Add-mechanism-for-detecting-latched-hardware-Rx-.patch
 	patches.drivers/0013-igb-Free-any-held-skb-that-should-have-been-timestam.patch
+	patches.drivers/0014-igb-Use-in-kernel-PTP_EV_PORT-define.patch
 
 	########################################################
 	# Wireless Networking
