--- a/series.conf
+++ b/series.conf
@@ -14369,6 +14369,7 @@
 	patches.drivers/0003-net-compat-Merge-multiple-implementations-of-ifreq-i.patch
 	patches.drivers/0004-net_tstamp-Improve-kernel-doc-for-struct-hwtstamp_co.patch
 	patches.drivers/0005-net_tstamp-Add-SIOCGHWTSTAMP-ioctl-to-match-SIOCSHWT.patch
+	patches.drivers/0006-remove-init-of-dev-perm_addr-in-drivers.patch
 
 	########################################################
 	# Wireless Networking
