igb: Read register for latch_on without return value (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14427,6 +14427,7 @@
 	patches.drivers/0061-igb-Removed-unused-i2c-function.patch
 	patches.drivers/0062-treewide-relase-release.patch
 	patches.drivers/0063-igb-fix-vlan-filtering-in-promisc-mode-when-not-in-V.patch
+	patches.drivers/0064-igb-Read-register-for-latch_on-without-return-value.patch
 
 	########################################################
 	# Wireless Networking
