--- a/series.conf
+++ b/series.conf
@@ -14513,6 +14513,7 @@
 	patches.drivers/0147-igb-use-mac-loopback-for-i354-backplane.patch
 	patches.drivers/0148-igb-add-defaults-for-i210-TX-RX-PBSIZE.patch
 	patches.drivers/0149-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/0150-net-use-ethtool_cmd_speed_set-helper-to-set-ethtool-.patch
 
 	########################################################
 	# Wireless Networking
