igb: Don't receive packets when the napi budget == 0 (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14472,6 +14472,7 @@
 	patches.drivers/0106-igb-fix-warning-if-CONFIG_IGB_HWMON.patch
 	patches.drivers/0107-net-igb-calls-skb_set_hash.patch
 	patches.drivers/0108-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
+	patches.drivers/0109-igb-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	########################################################
 	# Wireless Networking
