igb: Remove dead code path (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14413,6 +14413,7 @@
 	patches.drivers/0047-igb-Use-pci_vfs_assigned-instead-of-igb_vfs_are_assi.patch
 	patches.drivers/0048-igb-display-a-warning-message-when-SmartSpeed-works.patch
 	patches.drivers/0049-igb-Retain-HW-VLAN-filtering-while-in-promiscuous-VT.patch
+	patches.drivers/0050-igb-Remove-dead-code-path.patch
 
 	########################################################
 	# Wireless Networking
