--- a/series.conf
+++ b/series.conf
@@ -14461,6 +14461,7 @@
 	patches.drivers/0095-igb-Add-media-switching-feature-for-i354-PHY-s.patch
 	patches.drivers/0096-igb-Support-ports-mapped-in-64-bit-PCI-space.patch
 	patches.drivers/0097-igb-Add-new-feature-Media-Auto-Sense-for-82580-devic.patch
+	patches.drivers/0098-igb-Start-temperature-sensor-attribute-index-with-1.patch
 
 	########################################################
 	# Wireless Networking
