--- a/series.conf
+++ b/series.conf
@@ -4986,6 +4986,7 @@
 	patches.fixes/mm-vmscan-check-for-fatal-signals-iff-the-process-was-throttled.patch
 	patches.fixes/mm-swap-redirty-page-if-swap-file-write-fails.patch
 	patches.fixes/mm-swap-mark-pages-writeback-before-dio.patch
+	patches.fixes/mm-vmscan-prevent-kswapd-livelock-due-to-pfmemalloc-throttled-process-being-killed.patch
 
 	# SUNRPC stuff that conflicts with SoN patches.
 
