KVM: Record instruction set in all vmexit tracepoints (bnc#916472).

--- a/series.conf
+++ b/series.conf
@@ -18163,6 +18163,9 @@
 	patches.arch/kvm-nvmx-set-success-rflags-when-emulate-vmxon-vmxoff-in-nested-virt.patch
 	patches.arch/kvm-vmx-disable-apic-virtualization-in-nested-guests.patch
 
+	# bsc#916472 - additional nested virtualization fixes
+	patches.arch/kvm-record-instruction-set-in-all-vmexit-tracepoints.patch
+
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
 	patches.arch/x86-apic-allow-x2apic-without-ir-on-vmware-platform.patch
