--- a/series.conf
+++ b/series.conf
@@ -18173,6 +18173,7 @@
 	patches.arch/kvm-vmx-fix-lazy-fpu-on-nested-guest.patch
 	patches.arch/kvm-nvmx-add-support-for-activity-state-hlt.patch
 	patches.arch/kvm-nvmx-pass-vmexit-parameters-to-nested_vmx_vmexit.patch
+	patches.arch/kvm-nvmx-add-tracepoints-for-nested_vmexit-and-nested_vmexit_inject.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
