KVM: nVMX: Amend nested_run_pending logic (bnc#916472).

--- a/series.conf
+++ b/series.conf
@@ -18167,6 +18167,7 @@
 	patches.arch/kvm-record-instruction-set-in-all-vmexit-tracepoints.patch
 	patches.arch/kvm-vmx-move-vmx_nmi_allowed-after-vmx_set_nmi_mask.patch
 	patches.arch/kvm-nvmx-fix-conditions-for-nmi-injection.patch
+	patches.arch/kvm-nvmx-amend-nested_run_pending-logic.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
