--- a/series.conf
+++ b/series.conf
@@ -18165,6 +18165,7 @@
 
 	# bsc#916472 - additional nested virtualization fixes
 	patches.arch/kvm-record-instruction-set-in-all-vmexit-tracepoints.patch
+	patches.arch/kvm-vmx-move-vmx_nmi_allowed-after-vmx_set_nmi_mask.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
